# et

./: .gitignore  TODO
demos/audio/: CMakeLists.txt  main.cc
demos/graph/: CMakeLists.txt  main.cc  oldcc.bkp
demos/opengl/: CMakeLists.txt  main.cc
demos/ring_buffer/: CMakeLists.txt  main.cc
et/: audio.hpp  dsp.hpp  et.hpp  graph.hpp  math.hpp  mem.hpp  test.hpp  types.hpp
et/audio/: TODO  buffer.hpp  db.hpp  engine.cc  engine.hpp  input.cc  module.cc  module.hpp  parameter.hpp  port.cc  port.hpp
et/audio/backends/: jack_backend.cc  jack_backend.hpp  portaudio_backend.cc  portaudio_backend.hpp  rtmidi_backend.cc  rtmidi_backend.hpp
et/audio/common/: audio_buffer.hpp  sample_buffer.hpp
et/audio/engine/: engine.cc  engine.hpp  processor.cc  processor.hpp
et/audio/engine/backends/: jack_backend.cc  jack_backend.hpp
et/audio/midi/: midi_backend.cc  midi_backend.hpp  midi_io.cc  midi_io.hpp  midi_message.hpp  midi_timing_info.hpp
et/audio/modules/: adsr.cc  adsr.hpp  bitcrusher.cc  bitcrusher.hpp  input.cc  input.hpp  midi_input.hpp  mixer.cc  mixer.hpp  module.cc  module.hpp  op.cc  op.hpp  osc.cc  osc.hpp  oscillator.cc  oscillator.hpp  output.cc  output.hpp  parameter.hpp  port.cc  port.hpp  synth.cc  synth.hpp
et/audio/modules/bkp/: bitcrusher.cc.bkp  bitcrusher.cc2  bitcrusher.hpp2  mixer.hpp.bkp
et/audio/processors/: mixer.hpp  oscillator.cc  oscillator.hpp  processor.cc  processor.hpp
et/dsp/: oscillator.cc  oscillator.hpp
et/dsp/old/: bitcrusher.cc.bkp  bitcrusher.hpp.bkp  module.hpp.bkp  osc.hpp.bkp  oscillator.cc.bkp
et/graph/: atmosphere.cc  atmosphere.hpp  camera.hpp  color.hpp  mesh.hpp  obj.cc  obj.hpp  pixel.hpp  pixelBuffer.hpp  ray.hpp  scene.cc  scene.hpp  shader.h
et/graph/components/: camera.cc  camera.hpp  component.hpp  component_manager.cc  component_manager.hpp  geometry.hpp  material.cc  material.hpp  mesh.hpp  sdf.cc  sdf.hpp  shader.hpp  transform.cc  transform.hpp
et/graph/old/: mesh.cpp  mesh.h
et/graph/renderers/: renderer.hpp
et/graph/renderers/gl/: shader.cpp  shader.h
et/graph/renderers/opengl/: opengl_renderer.cc  opengl_renderer.hpp
et/graph/renderers/pt/: path_tracer.cc  path_tracer.hpp
et/math/: TODO  constants.hpp  functions.cc  functions.hpp  mat2.cc  mat2.hpp  mat3.cc  mat3.hpp  mat4.cc  mat4.hpp  random.cc  random.hpp  vec2.cc  vec2.hpp  vec3.cc  vec3.hpp  vec4.cc  vec4.hpp
et/mem/: buffer.hpp  ring_buffer.hpp
et/test/: test.cc  test.hpp
examples/audio/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  Makefile  main.cc  run_tests  test.cc  test.hpp  test_assertion.hpp
tests/math/: functions.hpp  mat2.hpp  mat3.hpp  mat4.hpp  math.hpp  test.hpp  vec2.hpp  vec3.hpp  vec4.hpp
